<resources>
    <string name="app_name">King calculator</string>

    <string name="players_one">Player One</string>
    <string name="players_two">Player Two</string>
    <string name="players_three">Player Three</string>
    <string name="players_four">Player Four</string>

    <string name="player_null">Deleted</string>
    <string name="party_did_not_start">Party didn\'t start</string>

    <string name="game_type_tt">Take Tricks</string>
    <string name="game_type_tb">Take Boys</string>
    <string name="game_type_tg">Take Girls</string>
    <string name="game_type_th">Take Hearts</string>
    <string name="game_type_tk">Take King</string>
    <string name="game_type_tl">Take Last Two</string>
    <string name="game_type_tfg">Take BFG</string>
    <string name="game_type_ntt">Don\'t take Tricks</string>
    <string name="game_type_ntb">Don\'t take Boys</string>
    <string name="game_type_ntg">Don\'t take Girls</string>
    <string name="game_type_nth">Don\'t take Hearts</string>
    <string name="game_type_ntk">Don\'t take King</string>
    <string name="game_type_ntl">Don\'t take Last Two</string>
    <string name="game_type_ntfg">Don\'t take BFG</string>

    <string name="name_player">Name player</string>
    <string name="real_name_player">Real name</string>
    <string name="start_party">Start Party</string>
    <string name="exit">Exit</string>
    <string name="ok">OK</string>
    <string name="save_player">Save player</string>
    <string name="enter_real_name">Enter real name</string>
    <string name="enter_first_name">Enter first name</string>
    <string name="game_finished">Game finished</string>
    <string name="game_no_finished">Game NO finished</string>
    <string name="delete_player">DELETE PLAYER</string>
    <string name="setup_party">Setup party</string>
    <string name="real_name_check">This real name not registered</string>
    <string name="party_view">Party view</string>

    <string name="menu_settings">Settings</string>
    <string name="menu_help">Help</string>
    <string name="menu_players">Players list</string>
    <string name="menu_delete_all">Delete all parties</string>

    <string name="descr_party_stat">Party statistic</string>
    <string name="descr_party_del">Party delete</string>
    <string name="descr_player_stat">Player\'s statistic</string>
    <string name="fab_content_desc">add new data</string>

    <string name="nav_label_parties_list">Parties list</string>
    <string name="nav_label_players_list">Players list</string>
    <string name="nav_label_player_card">Player card</string>
    <string name="nav_label_player_info">Player info</string>
    <string name="nav_label_player_add_form">Player add Form</string>
    <string name="nav_label_party_card">Party card</string>
    <string name="nav_label_party_add_form">Party add form</string>
    <string name="nav_label_party_info">Party info</string>
    <string name="nav_label_game_add_form">Game add form</string>
    <string name="nav_label_data_settings">Data settings</string>

    <string name="help_text_parties_list">Here you can manage parties: View game statistics, delete old or create new competitions.</string>
    <string name="help_text_players_list">Here you can manage players: View personal statistics, delete a player or create a new character.</string>
    <string name="help_text_player_card">Here you can change the name of the player. Real name cannot be changed, but you can delete your account and create a new one.</string>
    <string name="help_text_player_info">Here you can see the player\'s personal statistics. New types of statistics will be added in the next version.</string>
    <string name="help_text_player_add_form">Here you can create a new player. Player name and real name must be unique.</string>
    <string name="help_text_party_card">Here you can see the status of the party and bet the next game.</string>
    <string name="help_text_party_add_form">Here you can select four players and create a party.</string>
    <string name="help_text_party_info">Here you can see the games played in the party and the points scored.</string>
    <string name="help_text_game_add_form">Here you can enter the results of the game played and calculate the points for the game.</string>
    <string name="help_text_data_settings">Here you can delete game data to get rid of application errors.</string>

    <string name="snackbar_btn_return">Return to table</string>
    <string name="snackbar_btn_reload">Reload</string>
    <string name="snackbar_btn_neutral_ok">OK</string>

    <string name="button_save_player">Save player</string>
    <string name="button_delete_player">Delete player</string>
    <string name="button_start_party">Start party</string>
    <string name="button_save_result">Save result</string>
    <string name="button_dec">dec</string>
    <string name="button_inc">inc</string>

    <string name="card_helper_text">Edit your name</string>
    <string name="card_real_name">Real name</string>
    <string name="card_party_name">Party name</string>
    <string name="card_player_name">Player name</string>

    <string name="form_helper_name_text">Enter you name</string>
    <string name="form_helper_real_name_text">Enter you real name</string>
    <string name="form_helper_party_text">Enter party name</string>
    <string name="form_game_type_text">Game type</string>

    <string name="use_case_type_parties">Player total parties</string>
    <string name="use_case_type_games">Player total games</string>
    <string name="use_case_type_score">Player total score</string>
    <string name="use_case_type_percent">Average percentage by game type</string>
    <string name="use_case_score_by_type">Total score by game type</string>

    <string name="message_data_load">Data load successfully</string>
    <string name="message_data_save">Data save successfully</string>
    <string name="message_error_bad_database">DataBase error! Please, drop data in settings.</string>
    <string name="message_error_valid_name">Please enter a valid name</string>
    <string name="message_error_valid_real_name">Please enter a valid real name</string>
    <string name="message_error_data_unknown">Error data unknown! Please, drop data in settings.</string>
    <string name="message_error_data_null">Data is unavailable</string>
    <string name="message_error_data_load">Could not load data</string>
    <string name="message_error_data_save">Could not save data</string>
    <string name="message_error_data_delete">Could not delete data</string>
    <string name="message_error_player_info">Player info invalidated</string>
    <string name="message_error_input_values">Input data is invalidated</string>
    <string name="message_error_players_info_empty">Please fill in the fields with the names of the players</string>
    <string name="message_error_player_id">Player with this id not found</string>
    <string name="message_error_validate_real_name_blank">The real name can\'t be blank</string>
    <string name="message_error_validate_real_name">That\'s not a valid real name</string>
    <string name="message_error_validate_player_name_length">The player name needs to consist of at least 3 characters</string>
    <string name="message_error_validate_player_name_high_length">The player name needs to consist of at most 20 characters</string>
    <string name="message_error_validate_party_name_length">The party name needs to consist of at least 3 characters</string>
    <string name="message_error_validate_party_name_high_length">The party name needs to consist of at most 20 characters</string>
    <string name="message_error_validate_real_name_different">Players names must be different</string>
    <string name="message_error_validate_payers_count">Not enough players</string>
    <string name="message_error_validate_players_is_active">Somebody players is deleted</string>
    <string name="message_delete_party_result">Deleted database note</string>
    <string name="message_delete_notes_result">Deleted %1$d database notes</string>
    <string name="message_error_game_validate_not_equal_sum">Total score is not equal to game score</string>
    <string name="message_error_real_name_check">This real name is already registered</string>

    <string name="hint_text_player_one_real_name">player one name</string>
    <string name="hint_text_player_two_real_name">player two name</string>
    <string name="hint_text_player_three_real_name">player three name</string>
    <string name="hint_text_player_four_real_name">player four name</string>

    <string name="hint_text_player_one">player one</string>
    <string name="hint_text_player_two">player two</string>
    <string name="hint_text_player_three">player three</string>
    <string name="hint_text_player_four">player four</string>

    <string name="ui_text_contacts">\ contracts the game</string>
    <string name="ui_text_total_games">\ in 56</string>
    <string name="ui_text_header_party_info">Game type</string>

    <string name="ui_settings_text_header">Data settings</string>
    <string name="ui_settings_text_title_delete_parties">Delete all party notes</string>
    <string name="ui_settings_text_delete_parties">All party records will be deleted. Games notes and tricks notes will not be affected. The player\'s personal statistics will remain for accounting.</string>
    <string name="ui_settings_text_bttn_delete_parties">Delete parties</string>
    <string name="ui_settings_text_title_delete_games">Delete all games notes</string>
    <string name="ui_settings_text_delete_games">All parties, games and tricks notes will be deleted. Players notes will not be affected. Start your parties again.</string>
    <string name="ui_settings_text_bttn_delete_games">Delete games</string>
    <string name="ui_settings_text_title_delete_all">Delete all notes!!!</string>
    <string name="ui_settings_text_delete_all">All parties, games, tricks and players notes will be deleted. Eliminates all notes errors.</string>
    <string name="ui_settings_text_bttn_delete_all">Delete all</string>

    <string name="alert_confirm_delete_title">WARNING!</string>
    <string name="alert_confirm_delete_message">Confirm delete current notes</string>
    <string name="alert_confirm_title">Confirm game type</string>
    <string name="alert_confirm_message">Confirm selected game as %1s</string>
    <string name="input_tricks_title">Tricks count</string>
    <string name="input_tricks_message">Input new value</string>
    <string name="dialog_neutral_btn_text">OK</string>
    <string name="alert_help_text_title">Help note</string>

    <string name="action_yes">Yes</string>
    <string name="action_dismiss">Dismiss</string>
    <string name="rv_header_text_divider">:\ </string>
    <string name="rv_footer_text_total_score">Total player score = %1$d</string>
    <string name="rv_body_text_tricks">Tricks: %1$d</string>
    <string name="rv_body_text_error">ERROR!!!</string>
    <string name="rv_body_text_score">Score: %1$d</string>
    <string name="fragment_header">Total Game Score = %1$d</string>
</resources>