<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_players"
        android:orderInCategory="100"
        android:title="@string/menu_players"
        android:icon="@drawable/ic_baseline_users"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_delete_all"
        android:orderInCategory="100"
        android:title="@string/menu_delete_all"
        android:icon="@drawable/ic_baseline_delete_all_24"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_settings"
        android:orderInCategory="100"
        android:title="@string/menu_settings"
        android:icon="@drawable/ic_baseline_settings_24"
        app:showAsAction="ifRoom" />
</menu>